--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         <hr />
         <div class="row">
           <div class="col-4 d-flex justify-content-center flex-column gap-2" id="todoCol"></div>
-          <div class="col-4 d-flex justify-content-center flex-column gap-2" id="progCol"></div>
+          <div class="col-4 d-flex justify-content-center flex-column gap-2" id="progCol">
+            <h4 id="warningText">Enter a task to get started!</h4>
+          </div>
           <div class="col-4 d-flex justify-content-center flex-column gap-2" id="compCol"></div>
         </div>
       </div>
