--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         aria-controls="staticBackdrop"
       >
         <h3>add new task</h3>
+
       </button>
+      <h3 id="invalidText"></h3>
     </div>
     <div class="container">
       <div class="taskTable">
